# Driver_Detection

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  DlibInit.cpp  DlibInit.h  Driver_Detection.pro  Driver_Detection.pro.user.4.8-pre1  README.md  config.ini  configmanager.cpp  configmanager.h  dlibinit.cpp  dlibinit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu_icon.qrc  model.qrc  mydialog.cpp  mydialog.h  mydialog.ui  sdmvideoprocessor.h  utilsFunction.cpp  utilsFunction.h  utilsfunction.cpp  utilsfunction.h  videoprocessor.cpp  videoprocessor.h  videoprocessorinit.cpp  videoprocessorinit.h
res/: config.ini
utils/: ConfigManager.cpp  ConfigManager.h
